Cambios dde version

--- a/src/app/pages/layout/layout.page.html
+++ b/src/app/pages/layout/layout.page.html
@@ -9,7 +9,7 @@
         </cwc-overlay> -->    
     </cwc-header>         
 
-    <cwc-sidenav *ngIf="showPage" slot="sidenav" variant="positive" width="75%">
+    <cwc-sidenav *ngIf="showPage" slot="sidenav" open="false" variant="positive" width="75%">
         <!-- <cwc-entity-selector slot="legal-entity-selection" variant="positive">
             <cwc-entity-selector-item entity-icon="user" entity-name="Amanda Lopez" entity-id="Hombre Camnión" active>
                 <cwc-avatar size="small" variant="negative" name="Michael Wasserman" class="m-h-xs"></cwc-avatar>
