--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -19,9 +19,9 @@
     placeholder="Seleccionar"
     design-version="v2"
     filter>
-      <option value="3">Administrador Logistico Tercero</option>
-      <option value="2">Hombre Camión</option>
-      <option value="1">Conductor</option>
+      <cwc-picker-option value="3">Administrador Logistico Tercero</cwc-picker-option>
+      <cwc-picker-option value="2">Hombre Camión</cwc-picker-option>
+      <cwc-picker-option value="1">Conductor</cwc-picker-option>
   </cwc-picker>
   <!--=====================================
 		FORMULARIO DE REGISTRO HOMBRE CAMIÓN
