--- a/src/app/pages/travels/detail-search/detail-search.page.html
+++ b/src/app/pages/travels/detail-search/detail-search.page.html
@@ -9,42 +9,40 @@
     <cwc-cell colspan="6" mobile-colspan="12">
       <cwc-card class="card-info" design-version="v2">
         <div class="main-content-card">
-            <div class="header-card">
-                <div class="avatar-info">
-                    <span class="style-name">INFORMACIÓN DE VIAJE</span>
-                </div>
-            </div>    
-  
-            <hr color="#D0D0D0"/>
-            <cwc-grid class="demo-grid" style="padding-top: 0.5rem;">
-                <cwc-cell colspan="12" mobile-colspan="12">   
-                    <div class="attr-user">Origen</div>
-                    <span class="attr-detail">{{travel.Source}}</span>
-                </cwc-cell>
-            </cwc-grid>
-  
-            <cwc-grid class="demo-grid center-cell">
-                <cwc-cell colspan="12" mobile-colspan="12">
-                    <div class="attr-user">Destino</div>
-                    <span class="attr-detail">{{travel.Destiny}}</span>
-                </cwc-cell>                  
-            </cwc-grid>
-  
-            <cwc-grid class="demo-grid center-cell">
-              <cwc-cell mobile-colspan="12">
-                  <div class="attr-user">Fecha y hora de cita</div>
-                  <span class="attr-detail">{{travel.DateTravel}} - {{travel.TimerStar}}</span>
-              </cwc-cell>           
-            </cwc-grid>
-  
-            <cwc-grid class="demo-grid center-cell" style="padding-top: 1rem;">
-              <cwc-cell colspan="12" mobile-colspan="12">
-                <cwc-button
-                  (cwcClick)="onClickCreateRequest()"
-                  design-version="v1"
-                  variant="regular-block">SOLICITAR CITA</cwc-button>
-              </cwc-cell>                  
-            </cwc-grid>
+          <div class="header-card">
+            <div class="avatar-info">
+              <span class="style-name">INFORMACIÓN DE VIAJE</span>
+            </div>
+          </div>
+
+          <hr color="#D0D0D0" />
+          <cwc-grid class="demo-grid" style="padding-top: 0.5rem;">
+            <cwc-cell colspan="12" mobile-colspan="12">
+              <div class="attr-user">Origen</div>
+              <span class="attr-detail">{{travel.Source}}</span>
+            </cwc-cell>
+          </cwc-grid>
+
+          <cwc-grid class="demo-grid center-cell">
+            <cwc-cell colspan="12" mobile-colspan="12">
+              <div class="attr-user">Destino</div>
+              <span class="attr-detail">{{travel.Destiny}}</span>
+            </cwc-cell>
+          </cwc-grid>
+
+          <cwc-grid class="demo-grid center-cell">
+            <cwc-cell mobile-colspan="12">
+              <div class="attr-user">Fecha y hora de cita</div>
+              <span class="attr-detail">{{travel.DateTravel}} - {{travel.TimerStar}}</span>
+            </cwc-cell>
+          </cwc-grid>
+
+          <cwc-grid class="demo-grid center-cell" style="padding-top: 1rem;">
+            <cwc-cell colspan="12" mobile-colspan="12">
+              <cwc-button (cwcClick)="onClickCreateRequest()" design-version="v1" variant="regular-block">SOLICITAR
+                CITA</cwc-button>
+            </cwc-cell>
+          </cwc-grid>
         </div>
       </cwc-card>
     </cwc-cell>
@@ -57,16 +55,17 @@
   </cwc-loader>
 </div>
 
-<cwc-modal id='alert-modal-succes' [open]="alertShow" close-on-bd-click="false" show-close-btn="false" (cwcClose)="closeModalOk()" >
+<cwc-modal id='alert-modal-succes' [open]="alertShow" close-on-bd-click="false" show-close-btn="false"
+  (cwcClose)="closeModalOk()">
   <div style='text-align: center'>
-      <h2 class='modal--confirmation__message'>Su solicitud ha sido enviada</h2>
-      <p>Su cita será confirmada por su adminstrador logístico</p>
+    <h2 class='modal--confirmation__message'>Su solicitud ha sido enviada</h2>
+    <p>Su cita será confirmada por su adminstrador logístico</p>
   </div>
   <footer slot='footer'>
     <div style='text-align: center'>
-        <cwc-button variant='link' routerLinkActive="router-link-active" (cwcClick)="closeModalOk()">
-          <h4>REGRESAR</h4>
-        </cwc-button>
+      <cwc-button variant='link' routerLinkActive="router-link-active" (cwcClick)="closeModalOk()">
+        <h4>REGRESAR</h4>
+      </cwc-button>
     </div>
-</footer>
+  </footer>
 </cwc-modal>
