--- a/src/app/pages/vehicles/new-vehicle/new-vehicle.page.html
+++ b/src/app/pages/vehicles/new-vehicle/new-vehicle.page.html
@@ -26,7 +26,7 @@
         </div>
         <div class="section">
           <cwc-input class="input" label='Número de SOAT (opcional)' inputmode="numeric" type="number" formControlName="Soat"
-            placeholder="Agregar los 20 dígitos de su número de SOAT" design-version="v2" maxlength="11"
+            placeholder="Agregar los 20 dígitos de su número de SOAT" design-version="v2" length="11"
             required></cwc-input>
         </div>
         <div class="section">
