--- a/src/global.scss
+++ b/src/global.scss
@@ -233,6 +233,18 @@ h1.text-black{
   border: 1px dashed #c7c7c7;
   background-color: #F4F6F9 ;
 }
+
+.contend-upload-camera-travel{
+  // margin-top: 1rem;
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed #c7c7c7;
+  background-color: #F4F6F9 ;
+}
+
 .img-photo-register{
   width: 100%;
   height: 100%;
