--- a/src/app/pages/drivers/drivers.page.scss
+++ b/src/app/pages/drivers/drivers.page.scss
@@ -1,5 +1,5 @@
 .navbar {
-    margin-top: 9.5rem;
+    margin-top: 10rem;
     margin-left: 1rem;
     margin-right: 1rem;
     position: fixed;
@@ -19,11 +19,11 @@
 
 .search-text{
    width: 100%;
-   height: 10px;
-   padding-bottom: 0;
 }
 
 .text-vehicles{
+    font-weight: 900;
+    font-size: 15px;
     color: #002A59;
 }
 
