--- a/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
+++ b/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
@@ -1,17 +1,11 @@
 <app-layout class="card-size">
-  <cwc-tabs variant="heading">
+  <cwc-tabs variant="heading" style="width: 100%;">
     <cwc-tab [active]="selectedTab == 'anteriores'" name='anteriores' (click)="changeTab('anteriores')">ANTERIORES</cwc-tab>
     <cwc-tab [active]="selectedTab == 'programados'" name='programados' (click)="changeTab('programados')">PROGRAMADOS</cwc-tab>
     <cwc-tab [active]="selectedTab == 'solicitudes'" name='solicitudes' (click)="changeTab('solicitudes')">SOLICITUDES</cwc-tab>
   </cwc-tabs>
   <div class="content-page">
-    <cwc-grid class="demo-grid" row-gap="2px">
-      <cwc-cell mobile-colspan="12" style="padding-top: 0.8rem;">
-        <div>
-          <cwc-input design-version="v2" class="search-text" variant="regular" rtl="false" trailing-icon='magnifier-glass' [(ngModel)]="search" placeholder='Buscar...'></cwc-input>  
-        </div>       
-      </cwc-cell>
-    </cwc-grid>  
+    <cwc-input class="search-text" variant="regular" rtl="false" trailing-icon='magnifier-glass' [(ngModel)]="search" placeholder='Buscar...'></cwc-input>
     <ion-content>
       <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
