--- a/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.scss
+++ b/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.scss
@@ -19,9 +19,9 @@
 }
 
 .search-text{
-   width: 100%;
-   height: 10px;
-   padding-bottom: 0;
+    width: 100%;
+    height: auto;
+    padding-bottom: 0;
 }
 
 .text-vehicles{
