--- a/src/app/pages/waiting-list/waiting-list.page.scss
+++ b/src/app/pages/waiting-list/waiting-list.page.scss
@@ -19,9 +19,9 @@
 }
 
 .search-text{
-   width: 100%;
-   height: 10px;
-   padding-bottom: 0;
+    width: 100%;
+    height: auto;
+    padding-bottom: 0;
 }
 
 .text-vehicles{
